quick pass through leaf traits
@NidhiVinod , in general this looks very good!

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -246,7 +246,7 @@ Recent advances in $T_{leaf}$ modeling (see "Scaling across Space and Time") wil
 
 ## Leaf traits 
 
-**Leaf traits determine the capacity of leaves to thermoregulate [@michaletzEnergeticCarbonEconomic2016], and as such are critical to optamize leaf metabolism (see following section) across forest vertical strata [@michaletzPlantThermoregulationEnergetics2015; @zwienieckiHydraulicLimitationsImposed2004]**
+**Leaf traits determine the capacity of leaves to thermoregulate [@michaletzEnergeticCarbonEconomic2016], and as such are critical to optimizing leaf metabolism (see following section) across forest vertical strata [@michaletzPlantThermoregulationEnergetics2015; @zwienieckiHydraulicLimitationsImposed2004]**
 Leaf morphology adjusts to the local microenvironment during leaf expansion [@zwienieckiHydraulicLimitationsImposed2004], and the ratio of direct to diffused light and associated water demands determines the differentiation of traits of sun and shade leaves [@casasSunShadeLeaves2011; @zwienieckiHydraulicLimitationsImposed2004; @keenanGlobalLeafTrait2016]. 
 This dichotomy in leaves is observed along the vertical gradient where canopy-leaves vary dramatically from canopy-interior and understory due to the differences in biophysical conditions (Figs. `r fig_NEON_vertical`, `r SIfig_NEON_all`). 
 
@@ -258,10 +258,9 @@ However, when it comes to understanding and modeling forest ecosystem function, 
 ### Intraspecific variation
 
 Within-canopy, leaf traits vary along the canopy light gradient [*i.e.,* in sun and shade leaves, @casasSunShadeLeaves2011] at a leaf anatomical, structural and biochemical level [Table `r table_leaf_traits`, @sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. 
-This variation shapes vertical $T_{leaf}$ patterns [Table 1; @fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016]. 
-Further, research to characterize trait relationships and responses through the vertical canopy is needed, because much of our understanding of trait coordination is based on the leaf economics spectrum concept (Wright et al. 2004) was developed using sun leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016]. 
-
-Independent of light environment, traits also vary within species along the ontogenetic trajectory from the understory to the canopy. For example, LMA, photosynthetic capacity [per area] and $gs$ have been observed to increase with height, separate from light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000].  
+~~This variation shapes vertical $T_{leaf}$ patterns [Table 1, @fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016].~~
+As much of our understanding of trait coordination is based on the leaf economics spectrum concept (Wright et al. 2004) was developed using sun leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016], further research is needed to characterize trait relationships and responses through the vertical canopy. 
+It has been established that independent of light environment, traits also vary within species along the ontogenetic trajectory from the understory to the canopy. For example, LMA, photosynthetic capacity [per area] and $gs$ have been observed to increase with height, separate from light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000].  
 
 ![Table `r table_leaf_traits`. (*For latest version of table, see tables.pdf.*)](table1.png)
 
@@ -274,31 +273,38 @@ nocite: |
 ---
 
 
-#### Anatomical, Morphological and Physiological traits
+#### (Anatomical, Morphological and Physiological traits)
 
-Sun leaves in the exposed canopy have traits that help avoid heat and water stress than shade leaves, for instance, by being smaller, hairier, with higher vein density [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006; @zwienieckiHydraulicLimitationsImposed200;@mathurPhotosyntheticEfficiencySun2018a], and steeper leaf-angle [@niinemetsAdjustmentFoliageStructure1998, *REF*]. These traits [see Table 1] collectively aid heat dissapation and regulate $T_{leaf}$-photosynthetic balance. Whereas, shade leaves have traits that maximize light capture in the diffused-light environment with sunflecks, for example lower LMA, but are more likely to get overheated than sun leaves due to greater thermal capacitance [@leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013b]. In open canopies where light is comparitively homogenous, exposed leaves are primarily shaped by $T_{air_{max}}$ and $VPD$ stress, rather than solely by light [@mediavillaFoliarPlasticityRelated2019a].
+Sun leaves in the exposed canopy have traits that help avoid heat and water stress -- for instance, by being smaller, hairier, and with higher vein density than shade leaves [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006; @zwienieckiHydraulicLimitationsImposed200;@mathurPhotosyntheticEfficiencySun2018a], and with steeper leaf-angle [@niinemetsAdjustmentFoliageStructure1998, *REF*]. These traits (Table 1) collectively aid heat dissipation and regulate $T_{leaf}$-photosynthetic balance. In contrast, shade leaves have traits that maximize light capture in the diffused-light environment with sunflecks (e.g., lower LMA), but are more likely to get overheated than sun leaves due to greater thermal capacitance [@leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013b]. In open canopies where light is comparatively homogeneous, exposed leaves are primarily shaped by $T_{air_{max}}$ and $VPD$ stress, rather than solely by light [@mediavillaFoliarPlasticityRelated2019a].
 
-#### Biochemical and elemental traits, and isoprenes
+#### (Biochemical and elemental traits, and isoprenes)
 
-Biochemical protection against foliage light and heat damage also increases with irradiance, and thus tends to be higher in the upper canopy than in the understory [Table 1]. 
-Caratenoids and xanthophyll cycle pigments--violaxanthin, antheraxanthin and zeaxanthin [$VAZ$]--can play a role in antioxidant scavenging and converting excess excitation energy into heat to reduce photoinhibition [@niinemetsPhotosynthesisResourceDistribution2007a; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. This is also important for leaf acclimation to higher temperature if high temperature impairs the photochemical energy dissipation pathway [@TemperaturedependentAdjustmentThermal1996].
+Biochemical protection against foliage light and heat damage also increases with irradiance, and thus tends to be higher in the upper canopy than in the understory (Table 1). 
+Caratenoids and xanthophyll cycle pigments -- violaxanthin, antheraxanthin and zeaxanthin ($VAZ$) -- can play a role in antioxidant scavenging and converting excess excitation energy into heat to reduce photoinhibition [@niinemetsPhotosynthesisResourceDistribution2007a; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. This is also important for leaf acclimation to higher temperature if high $T_{leaf}$ impairs the photochemical energy dissipation pathway [@TemperaturedependentAdjustmentThermal1996].
 
-Elemental traits, such as $N_{area}$ and $P_{area}$, contribute to activities of high leaf metabolism, including respiration [@meirLeafRespirationTwo2001;@weerasingheCanopyPositionAffects2014] and photosynthetic processes in sun leaves [Table 1; @scartazzaInvestigatingEuropeanBeech2016a;@niinemetsWithincanopyVariationRate2004;@weerasingheCanopyPositionAffects2014]. Evidence also shows that within canopy leaf nitrogen distribution is regulated to prevent photoinhibition in shade leaves during sunlecks, and direct light for sun leaves [@kitaoCanopyNitrogenDistribution2018]. Hence, although we would expect elemental traits to influence vertical foliar thermal sensitivity, this remains unclear as @zhuPlasticityPhotosyntheticHeat2018 and @osullivanThermalLimitsLeaf2017 observed no relation between foliar thermal tolerance and total foliar concentrations of N and P.  Further, higher heat tolerance in exposed canopies is facilitated by isoprenes in species capable of emitting isoprenes, providing these species with a selective advantage in a warming world [*REF*].
+Elemental traits, such as $N_{area}$ and $P_{area}$, contribute to activities of high leaf metabolism, including respiration [@meirLeafRespirationTwo2001;@weerasingheCanopyPositionAffects2014] and photosynthetic processes in sun leaves [Table 1, @scartazzaInvestigatingEuropeanBeech2016a;@niinemetsWithincanopyVariationRate2004;@weerasingheCanopyPositionAffects2014]. Within-canopy leaf nitrogen distribution is regulated to prevent photoinhibition in shade leaves during sunflecks, and direct light for sun leaves [@kitaoCanopyNitrogenDistribution2018]. Hence, although we would expect elemental traits to influence vertical foliar thermal sensitivity,  @zhuPlasticityPhotosyntheticHeat2018 and @osullivanThermalLimitsLeaf2017 observed no relation between foliar thermal tolerance and total foliar concentrations of N and P.  
 
-#### Leaf lifespan and Deciduousness ("Lifecycle / ecological traits? ")
+Further, higher heat tolerance in exposed canopies is facilitated by isoprenes in species capable of emitting isoprenes, *providing these species with a selective advantage in a warming world* [*REF*].
 
+#### (Leaf lifecycles)
 
-##### *Leaf lifespan*  
-
-Leaf age affects vulnerability to heat stress independent of light environment [e.g. Marias et al. 2017], and has a strong effect on metabolism [@kikuzawaSynthesisRelationshipsLeaf2006], including photosynthesis and respiration, and their temperature sensitivities [@zhouLeafageEffectsTemperature2015; @niinemetsLeafAgeDependent2016]. Sun leaves have shorter lifespans than shade leaves, and thus upper canopy leaves are on average younger than subcanopy leaves, therefore they operate closer to their photosynthetic optimum. However, because leaf turnover rates of sun leaves in the upper canopy are faster than in the subcanopy, damage does not really accumulate [@millerOnlySunlitLeaves2021]. The effect of leaf age on heat tolerance once leaves are fully expanded and mature, is that heat tolerance decreases with increasing leaf age [@zhouLeafageEffectsTemperature2015; REFS], along with photosynthesis and $gs$ and with a few expections between species [see @niinemetsLeafAgeDependent2016]. In evergreen species, temperature responses of photosynthesis and temperature sensitivity of respiration ($Q_{10}$) have also been observed to be greater in younger than older leaves [@zhouLeafageEffectsTemperature2015]. Additionally, because older leaves reach maximum $T_{leaf}$ sooner than younger leaves and can occupy a large part of the canopy, this would affect vertical gradient of thermal sensitivity [@zhouLeafageEffectsTemperature2015] **this needs some confirming by co-authors**.
+Leaf age affects vulnerability to heat stress independent of light environment [e.g., Marias et al. 2017], and has a strong effect on metabolism [@kikuzawaSynthesisRelationshipsLeaf2006], including photosynthesis and respiration, and their temperature sensitivities [@zhouLeafageEffectsTemperature2015; @niinemetsLeafAgeDependent2016].
+Sun leaves have shorter lifespans than shade leaves, and thus upper canopy leaves are on average younger than subcanopy leaves, therefore they operate closer to their photosynthetic optimum. However, because leaf turnover rates of sun leaves in the upper canopy are faster than in the subcanopy, less damage  accumulates [@millerOnlySunlitLeaves2021].
+Once leaves leaves are fully expanded and mature, heat tolerance decreases with leaf age [@zhouLeafageEffectsTemperature2015; REFS], as do $g_s$ and photosynthesis [with a few exceptions between species, @niinemetsLeafAgeDependent2016]. 
+In evergreen species, temperature responses of photosynthesis and temperature sensitivity of respiration ($Q_{10}$) have also been observed to be greater in younger than older leaves [@zhouLeafageEffectsTemperature2015].
+Additionally, because older leaves reach maximum $T_{leaf}$ sooner than younger leaves and can occupy a large part of the canopy, this would affect vertical gradient of thermal sensitivity [@zhouLeafageEffectsTemperature2015] **this needs some confirming by co-authors**.
 
 ### Interspecific variation 
 
-Generally, the pattern of fundamental trait adaptation to light gradients is across forest species is similar to within-canopy traits [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. However, the range in trait values can be several times greater in multi-species canopy than in understory species,  based on their inherent species-specific traits and responses to environmental conditions. Spatio-temporal gradients, offer another axis for trait variation, for instance in early- and late-successional species [Ishii and Asano, 2007; @ishiiExploringRelationshipsCanopy2004a]. Therefore,  patterns in $T_{leaf}$ are underpinned by both intra- and inter-specific variation in traits. For example, species with smaller leaves and larger $gs$ will be less vulnerable to temperature increase than species with larger leaves [@fauset_differences_2018; @songTreeSurfaceTemperature2020].
+Generally, the pattern of fundamental trait adaptation to light gradients across forest species is similar to within-canopy traits [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. 
+However, the range in trait values can be several times greater in multi-species canopy than in understory species, based on their inherent species-specific traits and responses to environmental conditions. 
+Spatio-temporal gradients offer another axis for trait variation, for instance in early- and late-successional species [Ishii and Asano, 2007, @ishiiExploringRelationshipsCanopy2004a]. 
+Therefore, $T_{leaf}$ patterns witnin forest ecosystems are underpinned by both intra- and inter-specific variation in traits. 
+*For example, species with smaller leaves and larger $gs$ will be less vulnerable to temperature increase than species with larger leaves [@fauset_differences_2018; @songTreeSurfaceTemperature2020].*
 
-##### *Deciduousness*
+##### (*Deciduousness* -- drop header, probably integrate this into paragraph above, or somehow re-organize the whole itnerspecific variation section)
 
-Seasonal leaf-loss or -gain can alter biophysical and $T_{leaf}$ gradient in the forest [@rey-sanchez_spatial_2016]. Deciduousness in tropical forests is an adaptation to conserve water that is more common is dry than wet tropical forests. Within tropical species, the fraction of deciduous trees tends to increase across tree size classes, with understory species typically remaining evergreen [@conditQuantifyingDeciduousnessTropical2000c]. In temperate deciduous forests, leaf-emergence is delayed with height-ontogeny, with understory species leafing-out earlier than canopy trees [@vitasseEarlierLeafoutRather2014; @seiwaChangesLeafPhenology1999]. 
+Seasonal leaf-loss or gain can alter biophysical and $T_{leaf}$ gradient in the forest [@rey-sanchez_spatial_2016]. Deciduousness in tropical forests is an adaptation to conserve water that is more common is dry than wet tropical forests. Within tropical species, the fraction of deciduous trees tends to increase across tree size classes, with understory species typically remaining evergreen [@conditQuantifyingDeciduousnessTropical2000c]. In temperate deciduous forests, leaf-emergence is delayed with height-ontogeny, with understory species leafing-out earlier than canopy trees [@vitasseEarlierLeafoutRather2014; @seiwaChangesLeafPhenology1999]. 
 
 ## Leaf metabolism and thermal responses
 
