--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -317,8 +317,7 @@ However, as we detail below, very few studies have valued temperature responses 
 # refs in this table need to go in the nocite field below (easiest in alphabetical order)
 ```
 ---
-nocite: | 
- @kafutiFoliarWoodTraits2020; @vanwittenbergheVariabilityStomatalConductance2012a; @roberts_stomatal_1990; @dangProfilesPhotosyntheticallyActive1997; @marencoLeafTraitPlasticity2017; @ambroseEffectsHeightTreetop2010; @zweifelMiddayStomatalClosure2002; @slot_photosynthetic_2019; @hernandezSimilarTemperatureDependence2020; @urbanInductionPhotosynthesisImportance2007;Carter and Cavaleri 2018; @martin_boundary_1999; @mau_temperate_2018; @kosugiSeasonalFluctuationsTemperature2006; @niinemetsVariabilityLeafMorphology2015; @bachofenLightVPDGradients2020; Hamerlynck and Knapp 1994; @cobleHowVerticalPatterns2016; @wykaResponsesLeafStructure2012; @rijkersEffectTreeHeight2000a; Ishida et al. 1999; @weerasingheCanopyPositionAffects2014; @scartazzaInvestigatingEuropeanBeech2016; @millerOnlySunlitLeaves2021; Harris and Medina 2013; @legnerWithincanopyVariationPhotosynthetic2014; @kitaoCanopyNitrogenDistribution2018; @fauset_differences_2018; @rey-sanchez_spatial_2016; @mullerEvidenceEfficientNonevaporative2021; @curtis_intracanopy_2019; @meirLeafRespirationTwo2001; @turnbullScalingFoliarRespiration2003; @arakiVerticalSeasonalVariations2017; @bolstad_foliar_1999; @kenzoHeightrelatedChangesLeaf2015; @harleyEffectsLightTemperature1996;@xuSeasonalVariationTemperature2006; @harleyEnvironmentalControlsIsoprene1997; @niinemetsHowLightTemperature2015; @sharkeyFutureIsopreneEmission2014b; @sharkeyFutureIsopreneEmission2014; @simpragaVerticalCanopyGradient2013; @athertonSpatialVariationLeaf2017
+nocite: | @kafutiFoliarWoodTraits2020; @vanwittenbergheVariabilityStomatalConductance2012a; @roberts_stomatal_1990; @dangProfilesPhotosyntheticallyActive1997; @marencoLeafTraitPlasticity2017; @ambroseEffectsHeightTreetop2010; @zweifelMiddayStomatalClosure2002; @slot_photosynthetic_2019; @hernandezSimilarTemperatureDependence2020; @urbanInductionPhotosynthesisImportance2007;Carter and Cavaleri 2018; @martin_boundary_1999; @mau_temperate_2018; @kosugiSeasonalFluctuationsTemperature2006; @niinemetsVariabilityLeafMorphology2015; @bachofenLightVPDGradients2020; Hamerlynck and Knapp 1994; @cobleHowVerticalPatterns2016; @wykaResponsesLeafStructure2012; @rijkersEffectTreeHeight2000a; Ishida et al. 1999; @weerasingheCanopyPositionAffects2014; @scartazzaInvestigatingEuropeanBeech2016; @millerOnlySunlitLeaves2021; Harris and Medina 2013; @legnerWithincanopyVariationPhotosynthetic2014; @kitaoCanopyNitrogenDistribution2018; @fauset_differences_2018; @rey-sanchez_spatial_2016; @mullerEvidenceEfficientNonevaporative2021; @curtis_intracanopy_2019; @meirLeafRespirationTwo2001; @turnbullScalingFoliarRespiration2003; @arakiVerticalSeasonalVariations2017; @bolstad_foliar_1999; @kenzoHeightrelatedChangesLeaf2015; @harleyEffectsLightTemperature1996;@xuSeasonalVariationTemperature2006; @harleyEnvironmentalControlsIsoprene1997; @niinemetsHowLightTemperature2015; @sharkeyFutureIsopreneEmission2014b; @sharkeyFutureIsopreneEmission2014; @simpragaVerticalCanopyGradient2013; @athertonSpatialVariationLeaf2017
 ---
 
 
@@ -360,7 +359,7 @@ Across species, $T_{50}$ is explained less by phylogeny [Slot et al. 2021; Perez
 
 **Similar to photosynthesis, respiration tends to be higher in canopy sun-leaves (Chen et al. 2020), but temperature sensitivity of respiration--$Q_{10}$--shows no definite trend along the vertical gradient [@bolstad_foliar_1999; Weerasinghe et al.2014].**
 
-A few studies have found $Q_{10}$ to be greater in upper-canopy leaves than in shaded lower-canopy leaves [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996], whereas @griffinCanopyPositionAffects2002 found that in Populas deltoides, lower canopy leaf respiration was more sensitive to changes in $T_{air}$ than upper canopy. Other studies have observed no difference in $Q_{10}$ within species vertical profiles and in seedling sun vs. shade leaves [@weerasingheCanopyPositionAffects2014; @bolstad_foliar_1999; @zaragoza-castellsDoesGrowthIrradiance2007; @zaragoza-castellsClimatedependentVariationsLeaf2008]. (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). 
+A few studies have found $Q_{10}$ to be greater in upper-canopy leaves than in shaded lower-canopy leaves [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996], whereas @griffinCanopyPositionAffects2002 found that in *Populas deltoides*, lower canopy leaf respiration was more sensitive to changes in $T_{air}$ than upper canopy. Other studies have observed no difference in $Q_{10}$ within species vertical profiles and in seedling sun vs. shade leaves [@weerasingheCanopyPositionAffects2014; @bolstad_foliar_1999; @zaragoza-castellsDoesGrowthIrradiance2007; @zaragoza-castellsClimatedependentVariationsLeaf2008]. (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). 
 @xuSeasonalVariationTemperature2006 found that the canopy-position effect gradient in respiration rates was much greater for Quercus rubra trees in mesic than in xeric sites, but $Q_{10}$ did not differ between canopy positions.
 
  
@@ -406,13 +405,15 @@ Phenologically, in temperate deciduous and mesic forests, understory growth can 
 
 Leaf-scale properties and processes aggregate non-linearly  in vertical and horizontal space, influencing stand-level ecosystem processes, and in turn biosphere-atmosphere exchanges of water, carbon, energy, and trace gases. As described above, variation in temperature across vertical gradients can interact with local light conditions and other vertically varying meteorological conditions to affect species composition (e.g., see @nakamuraForestsTheirCanopies2017), leaf traits, and photosynthesis . Linked to this local biophysical variation is the partitioning of evapotranspiration ($ET$) into soil evaporation, canopy evaporation, and transpiration, which occur across varying spatiotemporal scales depending on light availability, water stress, stomatal physiology, and turbulent transfer (Lawrence et al. 2007, Staudt et al. 2011). Vertical microclimate gradients interact with vertical variation in foliage density, influencing not only the location of evapotranspiration in the canopy, but also differences in rates and net gross primary productivity ($GPP$, Banerjee & Linn 2018). It has been demonstrated that net carbon assimilation and transpiration can vary substantially for forest canopies with the same LAI but different leaf area density distributions (e.g., Katul et al 2004 , Banerjee & Linn 2018). Further, although transpiration tends to be the dominant component of ET, partitioning is more complex in open canopies where soil evaporation can become more dominant (Baldocchi et al. 2004, Ma et al. 2020), likely affecting vertical thermal gradients. In other words, it matters whether foliage is dense or sparse, and whether it is concentrated higher in the canopy, lower in the canopy, or evenly distributed throughout. 
 
+Still, partitioning $ET$ into its constituent components, let alone vertically partitioning transpiration rates in the canopy, remains a challenge. Eddy covariance techniques, sap flow measurements, and stable isotope analysis offer useful tools, although errors can be large (Williams et al 2004, Herbst et al. 1996). To date, empirical analyses of ET vertical partitioning and interactions with temperature and vegetation structure have be concentrated in midlatitude ecosystems (e.g. Haverd et al 2009, 2011, Staudt et al. 2011, Ringgaard et al. 2014) *(KAT: but see Kunert et al. 2017 -not sure if this is equivalent)*. With respect to changing temperatures, the net effect of leaf- and plant-level thermal responses remains an active area of research, including both how vertical variation in thermal sensitivity influences forest ecosystem dynamics and biosphere-atmosphere interactions. 
+
 
 ## Implications [ & future research directions?]
 
 *Elsa: If emphsaize future research directions, could move the remote sensing opportunities to this section and frame modeling section around opportunities to use models to further explore open questions, scale these findings in space and time, and influence predictions*
 *(In this section, we consider implications of the patterns reviewed above for our understanding of the future of forests--both how we model them and what sorts of responses we can expect under climate change.)*
 
-Still, partitioning $ET$ into its constituent components, let alone vertically partitioning transpiration rates in the canopy, remains a challenge. Eddy covariance techniques, sap flow measurements, and stable isotope analysis offer useful tools, although errors can be large (Williams et al 2004, Herbst et al. 1996). To date, empirical analyses of ET vertical partitioning and interactions with temperature and vegetation structure have be concentrated in midlatitude ecosystems (e.g. Haverd et al 2009, 2011, Staudt et al. 2011, Ringgaard et al. 2014) *(KAT: but see Kunert et al. 2017 -not sure if this is equivalent)*. With respect to changing temperatures, the net effect of leaf- and plant-level thermal responses remains an active area of research, including both how vertical variation in thermal sensitivity influences forest ecosystem dynamics and biosphere-atmosphere interactions. 
+
 
 Having established how physical conditions and biological form and function vary across vertical gradients, we now turn attention to the implications of these patterns for our understanding of how forest ecosystems may be impacted by global change, and our ability to project this across space and time.
 
