remove not on @SlotMartijn 's data
I think it's late to try to include this, but if @SlotMartijn feels otherwise we can change course here. For now, I'm taking it out and will close the issue (#8)

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -359,7 +359,7 @@ Across species, $T_{50}$ is explained less by phylogeny [Slot et al. 2021; Perez
 
 **Similar to photosynthesis, respiration tends to be higher in canopy sun-leaves (Chen et al. 2020), but temperature sensitivity of respiration--$Q_{10}$--shows no definite trend along the vertical gradient [@bolstad_foliar_1999; Weerasinghe et al.2014].**
 
-A few studies have found $Q_{10}$ to be greater in upper-canopy leaves than in shaded lower-canopy leaves [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996], whereas @griffinCanopyPositionAffects2002 found that in *Populas deltoides*, lower canopy leaf respiration was more sensitive to changes in $T_{air}$ than upper canopy. Other studies have observed no difference in $Q_{10}$ within species vertical profiles and in seedling sun vs. shade leaves [@weerasingheCanopyPositionAffects2014; @bolstad_foliar_1999; @zaragoza-castellsDoesGrowthIrradiance2007; @zaragoza-castellsClimatedependentVariationsLeaf2008]. (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). 
+A few studies have found $Q_{10}$ to be greater in upper-canopy leaves than in shaded lower-canopy leaves [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996], whereas @griffinCanopyPositionAffects2002 found that in *Populas deltoides*, lower canopy leaf respiration was more sensitive to changes in $T_{air}$ than upper canopy. Other studies have observed no difference in $Q_{10}$ within species vertical profiles and in seedling sun vs. shade leaves [@weerasingheCanopyPositionAffects2014; @bolstad_foliar_1999; @zaragoza-castellsDoesGrowthIrradiance2007; @zaragoza-castellsClimatedependentVariationsLeaf2008]. 
 @xuSeasonalVariationTemperature2006 found that the canopy-position effect gradient in respiration rates was much greater for Quercus rubra trees in mesic than in xeric sites, but $Q_{10}$ did not differ between canopy positions.
 
  
